Add screenshot keybind, screenshots of desktop

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -237,6 +237,7 @@ bind = $mainMod, D, exec, discord
 bind = $mainMod, M, exec, minecraft-launcher
 bind = $mainMod, L, exec, hyprlock
 bind = Ctrl+Alt, Backspace, exit,
+bind = $mainMod SHIFT, S, exec, hyprshot -zm region -o ~/Pictures/Screenshots 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
@@ -275,7 +276,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
